app/styles/components/do.scss
@charset "UTF-8";

$do-background-color: #FFFFFF;
$do-text-color: #3776D1;
$done-background-color: #AAFFAA;
$done-text-color: #22AA22;

.do-list {
  margin: 0;
  padding: 0;
  list-style: none;
}

.do-wrapper {
  position: relative;
}

.do-item {
  position: absolute;
  left: 0px;
  right: 0px;
  padding: 10px;
  cursor: -moz-grab;
  cursor: -webkit-grab;

  &.ui-draggable-dragging {
    cursor: -moz-grabbing;
    cursor: -webkit-grabbing;
  }

  &.ui-draggable-dragging .do-item-inner {
    transform: scale(1.05);
    box-shadow: rgba(0, 0, 0, 0.2) 0px 10px 20px;
  }

  &.doing .do-item-inner {
    border-color: $done-text-color;
    color: $done-text-color;
  }

  &.done .do-item-inner {
    background-color: $done-background-color;
    border-color: $done-text-color;
    color: $done-text-color;
  }
}

.do-item-inner {
  position: absolute;
  left: 10px;
  right: 10px;
  top: 0px;
  bottom: 0px;
  background-color: rgba(0,0,0,0.07);
  transform: translateZ(0);
  transition: 200ms;
  border-radius: 10px;
  padding: 10px;
  border: solid 2px $do-text-color;
  background-color: $do-background-color;
  color: $do-text-color;
  overflow: hidden;
}

.do-background {
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  background-color: $done-background-color;
}

.do-body {
  position: relative;
  margin: 0;
}

